--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ email: haydenzhuxz@gmail.com
 linkedin_username: haydenz
 github_username: haydenz
 
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minima
 
 show_downloads: false
