--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 title: Hayden Zhu
-author:
-  email: haydenzhuxz@gmail.com
+
 description: Hayden' Personal Web
 markdown: kramdown
 
-minima:
-  social_links:
-    linkedin: haydenz
-    github: haydenz
+# social links
+email: haydenzhuxz@gmail.com
+linkedin_username: haydenz
+github_username: haydenz
 
 theme: jekyll-theme-minimal
 
