--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Hayden Zhu
 
-description: Hayden' Personal Web
+description: Hayden's Personal Web
 markdown: kramdown
 include: ["_pages"]
 
