--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Theme
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "default" # "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
+minimal_mistakes_skin: "dark" # "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
 
 # Author
 author:
   name: Hayden Zhu
   bio:
     Financial Engineering
-  # avatar           : /assets/images/coastal_trail.jpg
+  # avatar           : /assets/images/haydenz.jpg
   links:
     - label: "Hong Kong"
       icon: "fas fa-2x fa-fw fa-map-marker-alt"
