--- a/_config.yml
+++ b/_config.yml
@@ -13,24 +13,7 @@ plugins:
   - jekyll-remote-theme
 
 # Author
-author:
-  name: Hayden Zhu
-  bio:
-    Financial Engineering
-  # avatar           : /assets/images/haydenz.jpg
-  links:
-    - label: "Hong Kong"
-      icon: "fas fa-2x fa-fw fa-map-marker-alt"
-      url: "https://www.google.com/search?client=safari&rls=en&q=hong+kong&ie=UTF-8&oe=UTF-8#"
-    - label: "Email"
-      icon: "fas fa-2x fa-fw fa-envelope"
-      url: "haydenzhuxz [at] gmail.com"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/in/haydenz/"
-    - label: "GitHub"
-      icon: "fab fa-2x fa-fw fa-github"
-      url: "https://github.com/haydenz"
+author: Hayden Zhu
 
 # Footer
 footer:
@@ -40,7 +23,7 @@ footer:
       url: "https://github.com/haydenz"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin-in"
-      url: "https://www.linkedin.com/in/haydenz/"
+      url: "https://www.linkedin.com/in/haydenz"
 
 # Contents
 include:
