--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,10 +6,10 @@ Hayden Zhu:
   links:
     - label: "Hong Kong"
       icon: "fas fa-1g fa-fw fa-map-marker-alt"
-      url: "https://www.google.com/search?client=safari&rls=en&q=hong+kong&ie=UTF-8&oe=UTF-8#"
+      url: "https://earth.google.com/web/@22.3576782,114.1210132,22.94879269a,85997.88768377d,35y,0h,0t,0r"
     - label: "Email"
       icon: "fas fa-1g fa-fw fa-envelope"
-      url: "haydenzhuxz [at] gmail.com"
+      url: "haydenzhuxz[at]gmail.com"
     - label: "LinkedIn"
       icon: "fab fa-1g fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/haydenz"
