add amplframe link

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,10 +9,13 @@ Hayden Zhu:
       url: "https://earth.google.com/web/@22.3576782,114.1210132,22.94879269a,85997.88768377d,35y,0h,0t,0r"
     - label: "Email"
       icon: "fas fa-1g fa-fw fa-envelope"
-      url: "haydenzhuxz[at]gmail.com"
+      url: "haydenzhuxz@gmail.com"
     - label: "LinkedIn"
       icon: "fab fa-1g fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/haydenz"
     - label: "GitHub"
       icon: "fab fa-1g fa-fw fa-github"
       url: "https://github.com/haydenz"
+    - label: "Amplframe"
+      icon: "fas fa-1g fa-camera-retro"
+      url: "https://www.amplframe.com/haydenz"
