add project page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+# Title
+title: Hayden Zhu
+subtitle: "Lifelong Learner"
+
 # Theme
 remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin: "default" # "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
