navigation bar added

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,14 @@ main:
     url: /cv/
   - title: "Projects"
     url: /projects/
+
+# documentation links
+docs: 
+  - title: Meta
+  children:
+    - title: "About"
+      url: /about/
+    - title: "CV"
+      url: /cv/
+    - title: "Projects"
+      url: /projects/
