--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,8 @@ defaults:
       comments: true
       share: true
       related: true
+
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed
