--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-# Title
+# Site Setting
 title: Hayden Zhu
-subtitle: "Lifelong Learner"
+subtitle: "Lifelong Learner" # site tagline that appears below site title in masthead
+logo : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title : # overrides the website title displayed in the masthead, use " " for no title
+
 
 # Theme
 remote_theme: "mmistakes/minimal-mistakes"
@@ -54,6 +57,18 @@ defaults:
       comments: true
       share: true
       related: true
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: false
+      comments: false
+      sidebar:
+        nav: "docs"
 
 # Sass/SCSS
 sass:
