del amplframe; add coursera

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,6 +16,6 @@ Hayden Zhu:
     - label: "GitHub"
       icon: "fab fa-1g fa-fw fa-github"
       url: "https://github.com/haydenz"
-    - label: "Amplframe"
-      icon: "fas fa-1g fa-camera-retro"
-      url: "https://www.amplframe.com/haydenz"
+    - label: "Coursera"
+      icon: "fas fa-1g fa-fw fa-certificate"
+      url: "https://www.coursera.org/user/3de6cfb7782f9d3da9582ab1302e293d"
