--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ masthead_title : # overrides the website title displayed in the masthead, use " 
 
 # Theme
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "default" # "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
+minimal_mistakes_skin: "dark" # "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
 search: true
 # url: https://haydenz.com
 
