--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ Hayden Zhu:
       url: "https://earth.google.com/web/@22.3576782,114.1210132,22.94879269a,85997.88768377d,35y,0h,0t,0r"
     - label: "Email"
       icon: "fas fa-1g fa-fw fa-envelope"
-      url: "haydenzhuxz@gmail.com"
+      url: <a href=mailto:hayden.zhu.hk@gmail.com?subject="Hi Hayden"></a>
     - label: "LinkedIn"
       icon: "fab fa-1g fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/haydenz"
